Deployments/two-pod-diff-node/depl_two_node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node1-pod
  labels:
    app: node1-pod
spec:
  containers:
  - name: flask-app-single-container
    image: arijitsaha2002/flask_app:0.2
    ports:
    - containerPort: 5000 
  nodeSelector:
    app: node1  # Select the first node
---
apiVersion: v1
kind: Service
metadata:
  name: node1-pod-service
spec:
  selector:
    app: node1-pod 
  ports:
  - protocol: TCP
    port: 8080  
    targetPort: 5000  
  type: LoadBalancer
---
apiVersion: v1
kind: Pod
metadata:
  name: node2-pod
  labels:
    app: node2-pod 
spec:
  containers:
  - name: flask-app-single-container
    image: arijitsaha2002/flask_app:0.2
    ports:
    - containerPort: 5000 
  nodeSelector:
    app: node2  # Select the second node
---
apiVersion: v1
kind: Service
metadata:
  name: node2-pod-service
spec:
  selector:
    app: node2-pod 
  ports:
  - protocol: TCP
    port: 8080  
    targetPort: 5000  
  type: LoadBalancer
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-loadbalancer 
  labels:
    app: nginx-loadbalancer 
spec:
  containers:
  - name: nginx-loadbalancer-container
    image: nginx
    ports:
    - containerPort: 80
  nodeSelector:
    app: node1  # Select the first node
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer-service
spec:
  selector:
    app: nginx-loadbalancer 
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 80  
  type: LoadBalancer
---
