Deployments/two-pod-diff-node/two-pod-diff-node-two-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two-pod-diff-node-node1-pod
  labels:
    app: two-pod-diff-node-node1-pod
spec:
  containers:
  - name: two-pod-diff-node-container-01
    image: two-pod-diff-node
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 5000
    resources:
      limits:
        memory: 50Mi
      requests:
        cpu: 20m
  nodeSelector:
    app: two-pod-diff-node-node1  # Select the first node
---
apiVersion: v1
kind: Service
metadata:
  name: two-pod-diff-node-node1-pod-service
spec:
  selector:
    app: two-pod-diff-node-node1-pod 
  ports:
  - protocol: TCP
    port: 8080  
    targetPort: 5000  
  type: LoadBalancer
---
apiVersion: v1
kind: Pod
metadata:
  name: two-pod-diff-node-node2-pod
  labels:
    app: two-pod-diff-node-node2-pod 
spec:
  containers:
  - name: two-pod-diff-node-container
    image: two-pod-diff-node
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 5000 
  nodeSelector:
    app: two-pod-diff-node-node2  # Select the second node
---
apiVersion: v1
kind: Service
metadata:
  name: two-pod-diff-node-node2-pod-service
spec:
  selector:
    app: two-pod-diff-node-node2-pod
  ports:
  - protocol: TCP
    port: 8080  
    targetPort: 5000  
  type: LoadBalancer
---
apiVersion: v1
kind: Pod
metadata:
  name: two-pod-diff-node-nginx-loadbalancer 
  labels:
    app: two-pod-diff-node-nginx-loadbalancer
spec:
  containers:
  - name: two-pod-diff-node-nginx-loadbalancer-container
    image: nginx
    ports:
    - containerPort: 80
  nodeSelector:
    app: two-pod-diff-node-node1  # Select the first node
---
apiVersion: v1
kind: Service
metadata:
  name: two-pod-diff-node-loadbalancer-service
spec:
  selector:
    app: two-pod-diff-node-nginx-loadbalancer
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 80  
  type: LoadBalancer
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /two-pod-diff-node/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: two-pod-diff-node-loadbalancer-service
            port:
              number: 80
